# complaint-reports-drf

./: .env.sample  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run-test.sh
.github/workflows/: django.yml
proj/: manage.py
proj/claims/: admin.py  forms.py  middlewares.py  models.py  serializers.py  urls.py  views.py
proj/claims/migrations/: 0001_initial.py  0002_remove_claimreport_data.py  0003_claimreport_processed.py  0004_claimreport_archive.py  0005_remove_claimreport_attachments.py  0006_alter_claimreport_claim_report_type.py  0007_alter_claimreport_claim_report_type.py  0008_alter_claimreport_nip_alter_claimreport_tel_number.py  0009_alter_claimreport_claim_report_client_number_and_more.py  0010_alter_claimreport_quantity.py
proj/locale/pl/LC_MESSAGES/: django.po
proj/locale/ru/LC_MESSAGES/: django.po
proj/proj/: settings.py  urls.py
proj/static/css/: bootstrap-icons.css  style.css
proj/static/js/: animation-stop.js  attachments-validation.js  error-animation-stop.js  file-handler.js  form-fields-animation.js  lang-flag.js
proj/templates/: base.html  claim_report_form.html  footer.html  header.html  rate_limit_exceeded.html  success_claim_report.html
proj/tests/: conftest.py
proj/tests/claims_tests/: test_form.py  test_model.py  test_rate_limit_middleware.py  test_serializers.py  test_url.py  test_views.py
